--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-webpack-babel",
+  "name": "react-webpack-babel-styled",
   "version": "0.0.3",
-  "description": "React Webpack Babel Starter Kit",
+  "description": "React Webpack Babel styled Starter Kit",
   "main": "''",
   "scripts": {
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
@@ -11,16 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alicoding/react-webpack-babel"
+    "url": "https://github.com/minhlucvan/react-webpack-babel-styled"
   },
   "author": "Ali Al Dallal",
   "license": "MIT",
-  "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
+  "homepage": "https://github.com/minhlucvan/react-webpack-babel-styled#readme",
   "dependencies": {
-    "node-sass": "^4.2.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "sass-loader": "^4.0.2"
+    "styled-components": "^1.4.2"
   },
   "devDependencies": {
     "babel-core": "6.21.0",
@@ -31,13 +30,10 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-runtime": "^6.20.0",
-    "css-loader": "0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
-    "html-webpack-plugin": "^2.26.0",
     "postcss-loader": "^1.2.2",
+    "html-webpack-plugin": "^2.26.0",
     "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-cleanup-plugin": "^0.4.1",
