--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-runtime": "^6.20.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
-    "postcss-loader": "^1.2.2",
     "html-webpack-plugin": "^2.26.0",
+    "postcss-loader": "^1.2.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
